fix the wave for index first, not responsive yet

--- a/Frontend/css/index.css
+++ b/Frontend/css/index.css
@@ -7,45 +7,57 @@ body {
 }
 
 .ocean { 
-    background-color: white;
-    height: 0%;
+    max-height: 40%;
+    /* padding-top: 20%; */
     width:100%;
-    position:absolute;
-    bottom:0;
+    bottom: 0;
     left:0;
+    position: fixed;
+    /* height:auto; */
+    /* display: flex; */
+    /* justify-content: flex-end; */
 }
 
-.wave {
-    background: url('../img/waveRed.svg') repeat-x; 
-    position: absolute;
-    top: -150px;
-    width: 6400px;
-    height: 150px;
-    animation: wave 24s cubic-bezier(0.36, 0.45, 0.63, 0.53) infinite;
-    transform: translate3d(0, 0, 0);
-
-    /*animation: wave 40s cubic-bezier( 0.36, 0.45, 0.63, 0.53) infinite;*/
+svg {
+    /* position:absolute; */
+    /* bottom :-50%; */
+    /* margin-top: 2%; */
 }
-    
-@keyframes wave {
+
+
+svg path{
+	animation:pathAnim 7s; 
+	animation-timing-function: linear;
+	animation-iteration-count: infinite;
+}
+svg path:nth-child(2){
+	animation-delay: 1s
+}
+svg path:nth-child(3){
+	animation-delay: 3s
+}
+svg path:nth-child(4){
+	animation-play-state: paused;
+}
+
+@keyframes pathAnim {
     0% {
-        transform: translateX(0);
+        d: path("M0,192 C220,100,440,100,660,192 C880,290,1100,290,1320,192 L1320,300 L0,300");
     }
-    100% {
-        transform: translate(-100%);
-    }
-}
-
-
-@keyframes swell {
-    0%, 100% {
-        transform: translate3d(0,-25px,0);
+    25% {
+        d: path("M0,100 C220,100,440,192,660,192 C880,192,1100,100,1320,100 L1320,300 L0,300");
     }
     50% {
-        transform: translate3d(0,5px,0);
+        d: path("M0,192 C220,290,440,290,660,192 C880,100,1100,100,1320,192 L1320,300 L0,300");
+    }
+    75% {
+        d: path("M0,292 C220,292,440,100,660,100 C880,100,1100,292,1320,292 L1320,300 L0,300");
+    }
+    100% {
+        d: path("M0,192 C220,100,440,100,660,192 C880,290,1100,290,1320,192 L1320,300 L0,300");
     }
 }
-/* end of wave code */
+
 
 .bigdiv {
     position: relative;
